--- a/SD-330-F22SD-Assignment-1.csproj
+++ b/SD-330-F22SD-Assignment-1.csproj
@@ -7,4 +7,12 @@
     <RootNamespace>SD_330_F22SD_Assignment_1</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
+  </ItemGroup>
+
 </Project>
