Configuration dependency injection

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SpotifyContext": "Data Source=localhost\\SQLEXPRESS;Database=SpotifyDb;Integrated Security=True;TrustServerCertificate=True"
+  }
 }
