--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SpotifyContext": "Data Source=localhost\\SQLEXPRESS;Database=SpotifyDb;Integrated Security=True;TrustServerCertificate=True"
+    "SpotifyContext": "Data Source=localhost\\SQLEXPRESS;Database=SpotifyDb;Integrated Security=True;TrustServerCertificate=True",
+    "SpotyfyAppContext": "Server=(localdb)\\mssqllocaldb;Database=SD_330_F22SD_Assignment_1.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
